--- a/package.json
+++ b/package.json
@@ -3,14 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
-  },
-  "engines": {
-    "node": "14.17.1",
-    "npm": "6.14.13"
   },
   "private": true,
   "dependencies": {
