--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@googlemaps/js-api-loader": "^1.12.1",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "angular-cli-ghpages": "^1.0.0-rc.2",
     "bootstrap": "^4.5.0",
     "express": "^4.17.1",
     "path": "^0.12.7",
