--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "url-parse": ">=1.5.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.5",
